# MotherML

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml
.github/actions/setup-uv-env/: action.yml
.github/skills/update-docs/: SKILL.md
.github/workflows/: workflow.yml
examples/: prepareTabpfn.py
examples/notebooks/: README.md  alithea_rna.csv  bulk_rna.csv  compounds_class_1.csv  freesolv_train.csv  mother_config.yaml
examples/notebooks/01_basics/: 01_mother_framework_overview.ipynb  02_configuration_settings.ipynb  03_custom_preprocessing.ipynb  04_pipeline_with_settings.ipynb  05_compound_clustering.ipynb  06_predict_predict_uncertainty_interface.ipynb
examples/notebooks/02_regression/: 01_basic_regression.ipynb  02_random_forest_regression.ipynb  03_regression_with_uncertainty.ipynb  04_multitask_random_forest.ipynb  05_tabicl_regression.ipynb
examples/notebooks/03_classification/: 01_lasso_classification.ipynb  02_binary_classification_uncertainty.ipynb  03_ordinal_classification.ipynb  04_tabicl_classification.ipynb
examples/notebooks/04_feature_engineering/: 01_feature_selection.ipynb  02_boruta_feature_selection.ipynb  03_rna_preprocessing.ipynb  04_chemeleon_fingerprints.ipynb
examples/notebooks/05_advanced/: 01_custom_hyperparameter_optimization.ipynb  02_tabpfn_integration.ipynb  03_uncertainty_prediction_tabpfn.ipynb  04_ranking_model.ipynb  05_NODE.ipynb  05_custom_model_tuner_for_neural_network.ipynb  05_tabicl_embedding_transformer.ipynb  06_MI_BALD_uncertainty_explained.ipynb  06_heads.ipynb  07_chemeleon.ipynb
mkdocs/: mkdocs.yml
mkdocs/docs/: Changelog.md  chemistry.md  examples.md  feature_generation.md  standardization.md
mkdocs/docs/development/: dev.md  pr_approval_guidelines.md
mkdocs/docs/mother/: configurator.md  models.md  overview.md
scripts/: check_docs_python_fences.py  prepareTabpfn.py
src/mother/: __init__.py  chem.py  errors.py  pipeline_utils.py  settings.py  utils.py
src/mother/cv/: __init__.py  config.py  core.py  cv_methods.py
src/mother/cv/report/: __init__.py  cluster.py
src/mother/data/: mother_config.yaml
src/mother/feature_generation/: __init__.py  config.py  core.py  fp_gen.py  fp_gnn_gen.py
src/mother/ml/: __init__.py  config.py  core.py  estimators.py  properties.py  rna.py  utils.py
src/mother/ml/models/: balsa_acquisition.py  m_catboost.py  m_head_utils.py  m_heads.py  m_lasso.py  m_node.py  m_node_utils.py  m_randomForest.py  m_tabicl.py  m_tabpfn.py  utils.py
src/mother/optimization/: __init__.py  config.py  core.py  utils.py
src/mother/optimization/report/: optuna_qc.py
src/mother/preprocessing/: __init__.py  config.py  core.py  standardizer.py  utils.py
src/mother/preprocessing/data/: Salts.txt  kekulization_fixes.txt
test/: mark_slow_tests.py  test-dist.bash
test/unit/: conftest.py  test_balsa_acquisition.py  test_catboost_clf_uncertainty.py  test_catboost_clone.py  test_catboost_ranker.py  test_catboost_reg_uncertainty.py  test_chem.py  test_clustering.py  test_core.py  test_errors.py  test_examples.py  test_feature_generation.py  test_feature_importance.py  test_fpFactory.py  test_init.py  test_m_randomForest.py  test_ml.py  test_ml_uncertainty_neural.py  test_model_tuner.py  test_mother_cv.py  test_node_unit.py  test_pipeline.py  test_pipeline_utils.py  test_preprocessing.py  test_report.py  test_rna.py  test_settings.py  test_standardizer.py  test_tabicl.py  test_tabpfn.py  test_use_counts.py  test_utils.py
